--- a/zones/silence/index.html
+++ b/zones/silence/index.html
@@ -2067,7 +2067,7 @@
             const container = document.getElementById('profiles-grid');
             container.innerHTML = profiles.map((profile, index) => `
         <div class="group relative bg-black border border-gray-800 hover:border-gray-600 transition-all duration-500 overflow-hidden" style="animation: fadeInUp 0.6s ease forwards ${index * 0.15}s; opacity: 0;">
-            ${profile.id === 'isla' ? '<a href="https://islaband.com" target="_blank" rel="noopener noreferrer" class="block">' : profile.id === 'ethel' ? '<a href="https://ethelryker.com" target="_blank" rel="noopener noreferrer" class="block">' : ''}
+            ${({ 'isla': 'https://islaband.com', 'ethel': 'https://ethelryker.com', 'dominic': 'https://dominicryker.com' })[profile.id] ? `<a href="${({ 'isla': 'https://islaband.com', 'ethel': 'https://ethelryker.com', 'dominic': 'https://dominicryker.com' })[profile.id]}" target="_blank" rel="noopener noreferrer" class="block">` : ''}
             <div class="aspect-[3/4] overflow-hidden relative">
                 <!-- Video -->
                 <video class="character-video w-full h-full object-cover filter grayscale group-hover:filter-none transition-all duration-700" 
@@ -2088,7 +2088,7 @@
                     <p style="color: ${profile.color};" class="font-mono-custom text-xs tracking-wider">STATUS: ${profile.status}</p>
                 </div>
             </div>
-            ${(profile.id === 'isla' || profile.id === 'ethel') ? '</a>' : ''}
+            ${(['isla', 'ethel', 'dominic'].includes(profile.id)) ? '</a>' : ''}
             <div class="p-6 space-y-4">
                 <p class="text-gray-400 text-sm leading-relaxed">${profile.desc}</p>
                 <div class="border-t border-gray-800 pt-4">
